// Vitest Snapshot v1

exports[`SearchCountry > render component 1`] = `
<div
  class="flex md:justify-end relative"
  data-v-5f819f67=""
>
  <div
    class="md:max-w-xs w-full"
    data-v-5f819f67=""
  >
    <!--v-if-->
    <input
      autocomplete="off"
      class="placeholder:italic placeholder:text-slate-400 mt-1 px-3 py-2 bg-white border shadow-sm border-slate-300 placeholder-slate-400 focus:outline-none focus:border-sky-500 focus:ring-sky-500 block w-full rounded-md sm:text-sm focus:ring-1 dark:bg-neutral-800 dark:text-white outline-none focus:border-inherit focus:shadow-none transition-color"
      data-test="input"
      id="find-country"
      name=""
      pattern=""
      placeholder="Znajdź kraj.."
      type="text"
    />
    <!--v-if-->
  </div>
  <transition-stub
    appear="false"
    css="true"
    data-v-5f819f67=""
    persisted="false"
  >
    <!--v-if-->
  </transition-stub>
</div>
`;

exports[`SearchCountry > should open countries list 1`] = `
<div
  class="flex md:justify-end relative"
  data-v-5f819f67=""
>
  <div
    class="md:max-w-xs w-full"
    data-v-5f819f67=""
  >
    <!--v-if-->
    <input
      autocomplete="off"
      class="placeholder:italic placeholder:text-slate-400 mt-1 px-3 py-2 bg-white border shadow-sm border-slate-300 placeholder-slate-400 focus:outline-none focus:border-sky-500 focus:ring-sky-500 block w-full rounded-md sm:text-sm focus:ring-1 dark:bg-neutral-800 dark:text-white outline-none focus:border-inherit focus:shadow-none transition-color"
      data-test="input"
      id="find-country"
      name=""
      pattern=""
      placeholder="Znajdź kraj.."
      type="text"
    />
    <!--v-if-->
  </div>
  <transition-stub
    appear="false"
    css="true"
    data-v-5f819f67=""
    persisted="false"
  >
    <div
      class="absolute bottom-0 right-0 w-full md:max-w-xs z-10 translate-y-full rounded-md border border-slate-300 dark:border-white transition-color"
      data-v-5f819f67=""
    >
      <div
        class="list"
        data-v-5f819f67=""
      >
        
        
        <ul
          class="list list-outside list-decimal list-inside list-disc list-none"
          data-test="list"
        >
          
          <li
            class="list-item bg-slate-100 odd:bg-slate-200 dark:text-white dark:bg-neutral-600 dark:odd:bg-neutral-700 transition-color"
          >
            
            <span
              class="py-2 px-2 w-full block cursor-pointer"
              data-test="element-list-span"
              data-v-5f819f67=""
            >
              <img
                alt="Polinezja Francuska"
                class="image pr-1 pb-1 inline"
                data-test="image-country-PF"
                data-v-5f819f67=""
                src="https://flagcdn.com/16x12/pf.png"
              />
               Polinezja Francuska
            </span>
            
          </li>
          <li
            class="list-item bg-slate-100 odd:bg-slate-200 dark:text-white dark:bg-neutral-600 dark:odd:bg-neutral-700 transition-color"
          >
            
            <span
              class="py-2 px-2 w-full block cursor-pointer"
              data-test="element-list-span"
              data-v-5f819f67=""
            >
              <img
                alt="Polska"
                class="image pr-1 pb-1 inline"
                data-test="image-country-PL"
                data-v-5f819f67=""
                src="https://flagcdn.com/16x12/pl.png"
              />
               Polska
            </span>
            
          </li>
          
        </ul>
        
        
      </div>
    </div>
  </transition-stub>
</div>
`;
